--- a/MatterCadGui/MatterCadGui.csproj
+++ b/MatterCadGui/MatterCadGui.csproj
@@ -72,6 +72,7 @@
     <Compile Include="MatterCadGuiWidget.cs" />
     <Compile Include="CsgEdtors\CsgEditorBase.cs" />
     <Compile Include="OrthographicZProjection.cs" />
+    <Compile Include="PowerSupply.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
