--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,19 @@
 /WindowTest/obj/Debug
 /DinamiclyExecuteCode/bin/Debug
 /DinamiclyExecuteCode/obj/Debug
+/CommandLineExamples/BedLevelMount/bin/Debug
+/CommandLineExamples/BedLevelMount/obj/Debug
+/CommandLineExamples/DialGaugeMount/bin/Debug
+/CommandLineExamples/DialGaugeMount/obj/Debug
+/CommandLineExamples/PowerSupplyMountingFeet/bin/Debug
+/CommandLineExamples/PowerSupplyMountingFeet/obj/Debug
+/CommandLineExamples/SpoolBarHolderM90/bin/Debug
+/CommandLineExamples/SpoolBarHolderM90/obj/Debug
+/CommandLineExamples/SpoolBearingHolder/bin/Debug
+/CommandLineExamples/SpoolBearingHolder/obj/Debug
+/CommandLineExamples/StepArmForHobbit/bin/Debug
+/CommandLineExamples/StepArmForHobbit/obj/Debug
+/CommandLineExamples/TPBinoculars/bin/Debug
+/CommandLineExamples/TPBinoculars/obj/Debug
+/CommandLineExamples/TrainConnector/bin/Debug
+/CommandLineExamples/TrainConnector/obj/Debug
