build with .net6

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "Submodules/agg-sharp"]
 	path = Submodules/agg-sharp
 	url = https://github.com/MatterHackers/agg-sharp.git
+	branch = dot_net6
