--- a/CSharpCad.Test/CSharpCad.Test.csproj
+++ b/CSharpCad.Test/CSharpCad.Test.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CSharpCad6\CSharpCad6.csproj" />
+    <ProjectReference Include="..\OpenSharpCAD\OpenSharpCAD.csproj" />
     <ProjectReference Include="..\Submodules\agg-sharp\Csg\Csg.csproj" />
     <ProjectReference Include="..\Submodules\agg-sharp\VectorMath\VectorMath.csproj" />
     <ProjectReference Include="..\Submodules\agg-sharp\agg\Agg.csproj" />
