--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,9 @@
 <Project>
   <PropertyGroup>
-    <Company>MatterHackers Inc.</Company>
+    <Company>OpenSharpCAD</Company>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <NetVersion>net10.0</NetVersion>
-    <EnableWindowsTargeting>true</EnableWindowsTargeting>
+    <EnableWindowsTargeting Condition="'$(OS)' == 'Windows_NT'">true</EnableWindowsTargeting>
+    <EnableWindowsTargeting Condition="'$(OS)' != 'Windows_NT'">false</EnableWindowsTargeting>
   </PropertyGroup>
 </Project>
