--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
     "configurations": [
         {
             "name": ".NET Core Launch (console)",
-            "type": "coreclr",
+            "type": "dotnet",
             "request": "launch",
             "preLaunchTask": "build",
             "program": "${workspaceFolder}/OpenSharpCAD/bin/Debug/net10.0/CSharpCAD.dll",
