--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
             "extensionId": "ms-dotnettools.csharp",
             "path": "/usr/local/share/dotnet/dotnet"
         }
-    ]
+    ],
+    "dotnet.defaultSolution": "OpenSharpCAD.sln"
 }
