--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,7 +3,7 @@
     <Company>OpenSharpCAD</Company>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <NetVersion>net10.0</NetVersion>
-    <EnableWindowsTargeting Condition="'$(OS)' == 'Windows_NT'">true</EnableWindowsTargeting>
-    <EnableWindowsTargeting Condition="'$(OS)' != 'Windows_NT'">false</EnableWindowsTargeting>
+    <!-- Allow building Windows-specific projects (e.g. MatterCadGui, PlatformWin32) on non-Windows for CI/cross-build -->
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
   </PropertyGroup>
 </Project>
